--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.22.3",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
@@ -11,7 +12,7 @@
     "react-grid-gallery": "^0.5.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -40,7 +41,6 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.16.0"
+    "@typescript-eslint/parser": "^1.13.0"
   }
 }
