--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-grid-gallery": "^0.5.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.1",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +41,9 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0"
+    "@typescript-eslint/parser": "^1.13.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.0",
+    "noop-service-worker-middleware": "^3.0.0"
   }
 }
