--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.22.3",
-    "bootstrap": "^4.3.1",
-    "react": "^16.11.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "react": "^16.13.1",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.13.1",
     "react-grid-gallery": "^0.5.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "reactstrap": "^8.1.1",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
